# atlas

./: .gitignore  CAUSAL_LOOP_AUDIT.md  CLAUDE.md  CURRENT_STATE.md  PASSIVE_INCOME_SLEEVE.md  README.md  index.md  pyproject.toml
.reviews/: 040c053-review-2026-04-18T22-51-16Z.md  1d627c3-canon-adapter-review-2026-04-20T17Z.md  ledger-2a-prediction-model-2026-06-28.md  ledger-2b-scorer-2026-07-11.md  strip-theater-hypotheses-2026-06-28.md
deploy/: README.md  atlas-runner.service
docs/: CASE_STUDY.md
findings/: 2026-04-12_crossasset_lag6.md  2026-04-12_data_access_strategy.md  2026-04-12_dispersion_as_gate.md  2026-04-12_dispersion_narrow.md  2026-04-12_dvol_first_look.md  2026-04-12_dvol_killed.md  2026-04-12_events_first_pass.md  2026-04-12_fng_events.md  2026-04-12_funding_dispersion.md  2026-04-12_funding_gated.md  2026-04-12_funding_regime.md  2026-04-12_funding_reset_events.md  2026-04-12_lag6_decay.md  2026-04-12_leadlag_negative.md  2026-04-12_lowturn_lag6.md  2026-04-12_negative_results.md  2026-04-12_trainable_control.md  2026-04-13_zmf_delta.md  2026-04-13_zmf_eth_robustness.md  _backlog.md
graph/: causal_graph.json
scripts/: deploy-check.sh  dispersion_narrow.py  events_btc_car.py  fng_event_study.py  funding_reset_events.py  lag6_stationarity.py  migrate_claim_hash.py  zmf_delta.py  zmf_eth.py
tests/: test_auto_top_up.py  test_backtest.py  test_canon_adapter.py  test_causal_graph_refutations.py  test_claim_hash_migration.py  test_events.py  test_ingest.py  test_min_bars_guard.py  test_prediction_ledger.py  test_promotion_gate.py  test_signals.py  (+4 more)
(+357 files in other folders)
